--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "dotenv": "^1.2.0",
     "express": "^4.12.4",
     "jade": "^1.9.2",
     "request": "^2.55.0",
